<resources>
    <string name="appName">Air Analyzer</string>
    <string name="addDevice">Add device</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="time">Hours</string>
    <string name="latestHour">Latest hour</string>
    <string name="editTextUsername">Username</string>
    <string name="editTextPassword">Password</string>
    <string name="editTextEmail">Email</string>
    <string name="editTextName">Name</string>
    <string name="editTextSurname">Surname</string>
    <string name="editTextLocalIP">Local IP</string>
    <string name="textViewNew">New?\u0020</string>
    <string name="textViewSignup">Sign up</string>
    <string name="textViewLogin">Login</string>
    <string name="textViewTimezone">Timezone</string>
    <string name="textViewForgotPassword">Forgot password</string>
    <string name="textViewWelcomeGoodMorning">Good morning</string>
    <string name="textViewWelcomeGoodAfternoon">Good afternoon</string>
    <string name="textViewWelcomeGoodEvening">Good evening</string>
    <string name="textViewNoMeasure">None registered yet</string>
    <string name="textViewNoMeasureDescription">Maybe the devices are not registering nothing. Check again later.</string>
    <string name="textViewNoRoom">None activated yet</string>
    <string name="textViewNoNotification">No notification</string>
    <string name="textViewNone">None</string>
    <string name="textViewAddRoom">Add room</string>
    <string name="textViewRemoveRoom">Do you want remove</string>
    <string name="textViewAddRoomDescription">To add a room, please select one from the list and confirm it.</string>
    <string name="textViewAddDeviceDescription">To add a new device, firstly follow the setup on it and when is viewed an local IP (e.g. 192.168.0.100), copy it in this field and confirm it.</string>
    <string name="textViewAddDeviceRemember">Remember: your devices will have to be connected to the same local network.</string>
    <string name="textViewCategoryNotification">Notifications</string>
    <string name="textViewNotificationDevice">Status of device</string>
    <string name="textViewVersion">Version</string>
    <string name="textViewDeveloper">Developer</string>
    <string name="textViewSeparator">|</string>
    <string name="buttonLogin">Login</string>
    <string name="buttonContinue">Continue</string>
    <string name="buttonOk">OK</string>
    <string name="buttonCancel">Cancel</string>
    <string name="buttonAdd">Add</string>
    <string name="spinnerNotificationErrorsTime1">15 minutes</string>
    <string name="spinnerNotificationErrorsTime2">30 minutes</string>
    <string name="spinnerNotificationErrorsTime3">1 hour</string>
    <string name="spinnerNotificationErrorsTime4">2 hours</string>
    <string name="spinnerNotificationErrorsTime5">4 hours</string>
    <string name="chipRoomDateToday">Today</string>
    <string name="chipRoomDateYesterday">Yesterday</string>
    <string name="chipRoomDateCustom">Custom</string>
    <string name="noticeGraphNoMeasure">No measures in this date</string>
    <string name="toastServerOffline">Server offline, try again later</string>
    <string name="toastUserError">There is some error with authentication</string>
    <string name="toastIncorrectUsernamePassword">Incorrect username or password</string>
    <string name="toastErrorConnectionDevice">Error connection to device</string>
    <string name="toastErrorLocalNetwork">You must be in same local network</string>
    <string name="toastEmptyFieldLocalNetwork">You must insert a valid local IP to complete the request</string>
    <string name="toastAtThe">at the</string>
    <string name="toastRoomRemoved">The room has been removed</string>
    <string name="toastRoomRenamed">The room has been renamed</string>
    <string name="toastRoomAdded">The room has been added</string>
    <string name="toastDeviceAdded">The device has been added</string>
    <string name="dialogRemoveRoom">Are you sure you want to remove this room? This operation will not delete all the measures read.</string>
    <string name="dialogSettingNewDevice">Setting the new device. The operation will take about 30 seconds…</string>
    <string name="menuItemHome">Home</string>
    <string name="menuItemRoom">Rooms</string>
    <string name="menuItemNotifications">Notifications</string>
    <string name="menuItemSettings">Settings</string>
    <string name="menuItemManageRoom">Manage rooms</string>
    <string name="menuItemAddRoom">Add room</string>
    <string name="menuItemMarkAllRead">Mark all read</string>
    <string name="menuItemLogout">Logout</string>
    <string name="notificationChannelName_Device">Device</string>
    <string name="notificationChannelDescription_Device">Status of the devices, like connection and measure exception.</string>
    <string name="notificationTypeDevice_SubTypeDisconnected">Error connection device</string>
    <string name="notificationTypeDevice_SubTypeDisconnected_Body">is not revealing any measure from</string>
    <string name="notificationTypeDevice_SubTypeValidationFailed">Error measurement</string>
    <string name="notificationTypeDevice_SubTypeValidationFailed_Body">has revealed a strange measure for</string>
    <string name="notificationTypeDevice_End">Please, check the device.</string>
</resources>