<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity"
    android:background="@color/primaryColor" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!-- Title -->
        <TextView
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:text="@string/textViewLogin"
            android:textColor="@color/primaryTextDarkColor1"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:layout_marginTop="200dp" />

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:boxBackgroundColor="@color/primaryColor"
            android:textColorHint="@color/primaryTextDarkColor2"
            app:hintTextColor="@color/primaryTextDarkColor2"
            app:boxStrokeColor="@color/primaryTextDarkColor2"
            android:layout_marginTop="25dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsername"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/editTextUsername"
                android:textSize="15sp"
                android:textColor="@color/primaryTextDarkColor1"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewUsername"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp" />

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@color/primaryColor"
            android:textColorHint="@color/primaryTextDarkColor2"
            app:hintTextColor="@color/primaryTextDarkColor2"
            app:boxStrokeColor="@color/primaryTextDarkColor2" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/editTextPassword"
                android:textSize="15sp"
                android:textColor="@color/primaryTextDarkColor1"
                android:paddingStart="0dp"
                android:paddingEnd="0dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="324dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:textColor="@color/error"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="5dp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <TableRow>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/textViewNew"
                    android:textColor="@color/primaryTextDarkColor1" />

                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:text="@string/textViewSignup"
                    android:textColor="@color/buttonSecondary" />

                <TextView
                    android:id="@+id/textViewForgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:text="@string/textViewForgotPassword"
                    android:textColor="@color/buttonSecondary"
                    android:visibility="gone" />
            </TableRow>
        </TableLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/button_shape"
            android:textColor="@color/primaryTextDarkColor1"
            android:textSize="12sp"
            android:text="@string/buttonLogin"
            android:layout_marginTop="25dp" />
    </LinearLayout>
</ScrollView>
