<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".view.activity.AddRoomActivity" >

    <!-- ADD ROOM BOX -->
    <LinearLayout
        android:id="@+id/linearLayoutAddRoom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_card_room_graph"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:elevation="4dp"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:id="@+id/imageViewAddRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_circle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="20sp"
                android:text="@string/textViewAddRoom"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAddRoom" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/textViewAddRoomDescription" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <Spinner
                android:id="@+id/spinnerRooms"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonAddRoom"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonOk"
                android:background="@drawable/shape_button"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/spinnerRooms"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <!-- ADD DEVICE BOX -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_card_room_graph"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="10dp"
        android:padding="10dp"
        android:elevation="4dp"
        android:orientation="vertical" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:id="@+id/imageViewAddDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_circle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/addDevice"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageViewAddDevice"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewAddDeviceDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            android:text="@string/textViewAddDeviceRemember" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutLocalIP"
                android:theme="@style/TextInputEditText.Outlined"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                app:boxBackgroundColor="@color/background"
                app:hintTextColor="@color/secondaryColor"
                app:boxStrokeColor="@color/secondaryColor"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/buttonAddDevice"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextLocalIP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:digits="0123456789."
                    android:hint="@string/editTextLocalIP"
                    android:paddingStart="0dp"
                    android:paddingEnd="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAddDevice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/buttonOk"
                android:background="@drawable/shape_button"
                android:textColor="@color/secondaryTextColor"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textInputLayoutLocalIP"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>